--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -1,28 +1,72 @@
-.landing-page {
+.landingPage {
+    height: 100vh;
+    color: white;
     background: black;
 }
 
-.landing-image {
+.landingImageContainer {
+    padding: 0;
+}
+
+.landingImage{
     width:100%;
     height: 100vh;
     object-fit: cover;
     overflow: hidden;
 }
 
-.landing-header {
-    text-align: left;
-    margin-top: 20%;
+.landingHeader {
+    text-align: center;
+    margin: 20% 0 10% 0;
     font-size: 5rem;
     color: white;
 }
 
-.sign-up-text {
-    text-align: left;
-    margin-top: 8%;
-    font-size: 1.75rem;
+.appForm {
+    background-color: #12130f;
+    padding: 25px 40px;
+    overflow: auto;
+}
+
+.pageSwitcher {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10%;
+}
+
+.pageSwitcherItem {
+    background-color: #40434e;
+    color: #9da6b1;
+    padding: 10px 25px;
+    cursor: pointer;
+    font-size: 1em;
+    border: none;
+    outline: none;
+    display: inline-block;
+    text-decoration: none;
+}
+
+.pageSwitcherItem:hover {
     color: white;
 }
 
-.landing-right {
-    padding-left: 5%;
+.pageSwitcherItem-active {
+    background-color: #0b5ed7;
+    color: white;
+}
+
+.pageSwitcherItem:first-child {
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+
+.pageSwitcherItem:last-child {
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+
+@media screen and (max-width: 767px) {
+	.landingImage{
+        display: none;
+    }
 }
