--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,7 @@ code {
   text-decoration: none;
   display: inline-block;
   padding-bottom: 2px;
+  margin-top: 5px;
   margin-left: 5px;
 }
 
@@ -112,8 +113,4 @@ code {
   margin-top: 30px;
   font-size: 1em;
   color: white;
-}
-
-.socialMediaButtons {
-
 }
