--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -1,5 +1,5 @@
 .landingPage {
-    max-height: 100%;
+    min-height: 100vh;
     color: white;
     background: #12130f;
 }
@@ -24,7 +24,7 @@
 
 .appForm {
     background-color: #12130f;
-    padding: 25px 40px;
+    padding: 20px 40px !important;
     overflow: auto;
 }
 
