--- a/src/index.css
+++ b/src/index.css
@@ -74,14 +74,28 @@ code {
   color: white;
   border: none;
   outline: none;
-  border-radius: 25px;
-  padding: 15px 90px;
-  font-size: 1em;
+  border-radius: 30px;
+  height: 50px;
+  width: 240px;
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.formFieldButton2 {
+  display: block;
+  background-color: #FFFFFF;
+  color: #0b5ed7;
+  border: 1px solid #899098;
+  outline: none;
+  border-radius: 30px;
+  height: 50px;
+  width: 240px;
+  font-size: 1.1em;
   font-weight: 500;
 }
 
 .formFieldLink {
-  color: #66707d;
+  color: #899098;
   text-decoration: none;
   display: inline-block;
   border-bottom: 1.5px solid #0b5ed7;
@@ -89,8 +103,9 @@ code {
 }
 
 .formFieldCheckboxLabel {
-  color: #646f7d;
+  color: #899098;
   font-size: 1em;
+  margin-top: 10px;
 }
 
 .formFieldCheckbox {
@@ -104,13 +119,22 @@ code {
   text-decoration: none;
   display: inline-block;
   padding-bottom: 2px;
-  margin-top: 5px;
   margin-left: 5px;
 }
 
 .formAuthText {
   display: block;
-  margin-top: 30px;
-  font-size: 1em;
+  font-weight: 500;
+  margin: 20px 0;
+  font-size: 1.3em;
   color: white;
+}
+
+.googleBtn {
+  border-radius: 30px !important;
+  margin-top: 15px;
+}
+
+.googleBtn > div {
+  background-color: transparent !important;
 }
