--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,130 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.formCenter {
+  margin-bottom: 100px;
+}
+
+.formTitle {
+  color: #707c8b;
+  font-weight: 300;
+  margin-bottom: 50px;
+}
+
+.formTitleLink {
+  color: #707c8b;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.7em;
+  margin: 0 10px;
+  padding-bottom: 5px;
+}
+
+.formTitleLink:first-child {
+  margin-left: 0;
+}
+
+.formTitleLink-active {
+  color: white;
+  border-bottom: 1px solid #0b5ed7;
+}
+
+.formField {
+  margin-bottom: 40px;
+}
+
+.formFieldLabel {
+  display: block;
+  text-transform: uppercase;
+  font-size: 1em;
+  color: white;
+}
+
+.formFieldInput {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+  border-bottom: 1px solid #445366;
+  font-size: 1em;
+  font-weight: 300;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.formFieldInput::placeholder {
+  color: #616e7f;
+}
+
+.formFieldButton {
+  background-color: #0b5ed7;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  height: 50px;
+  width: 240px;
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.formFieldButton2 {
+  display: block;
+  background-color: #FFFFFF;
+  color: #0b5ed7;
+  border: 1px solid #899098;
+  outline: none;
+  border-radius: 30px;
+  height: 50px;
+  width: 240px;
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.formFieldLink {
+  color: #899098;
+  text-decoration: none;
+  display: inline-block;
+  border-bottom: 1.5px solid #0b5ed7;
+  padding-bottom: 5px;
+}
+
+.formFieldCheckboxLabel {
+  color: #899098;
+  font-size: 1em;
+  margin-top: 10px;
+}
+
+.formFieldCheckbox {
+  position: relative;
+  top: 1.5px;
+}
+
+.formFieldTermsLink {
+  color: white;
+  border-bottom: 1px solid #0b5ed7;
+  text-decoration: none;
+  display: inline-block;
+  padding-bottom: 2px;
+  margin-left: 5px;
+}
+
+.formAuthText {
+  display: block;
+  font-weight: 500;
+  margin: 20px 0;
+  font-size: 1.3em;
+  color: white;
+}
+
+.googleBtn {
+  border-radius: 30px !important;
+  margin-top: 15px;
+}
+
+.googleBtn > div {
+  background-color: transparent !important;
+}
