--- a/src/pages/WorkoutPage.css
+++ b/src/pages/WorkoutPage.css
@@ -1,11 +1,62 @@
+.mainCardWorkouts{
+    text-align: "center";
+    background-color: "#347aeb";
+    font-size: "200%";
+}
+
 .mainPage {
     min-height: 100vh;
     color: white;
     background: #12130f;
     max-width: inherit;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .noMargin {
     margin-left: 0 !important;
     margin-right: 0 !important;
 }
+
+.titleFont {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 150%;
+    /* or 60px */
+
+    letter-spacing: -0.01em;
+
+    color: #FFFFFF;
+}
+
+.titleLine {
+    border-width: 3px;
+    width: 28%;
+}
+.categoryTitleLine {
+    border-width: 3px;
+    width: 60%;
+}
+@media screen and (max-width: 767px) {
+    .exploreWorkoutsContainer{
+        height: 60vh;
+        width: 100%
+    }
+
+}
+.exploreWorkoutsContainer{
+    overflow-y: scroll;
+    overflow-x:hidden;
+    width: 100%;
+    height: 80vh;
+    background-color: #141414;
+}
+
+body{
+    overflow-x: hidden;
+}
+
+
+
