--- a/src/pages/WorkoutPage.css
+++ b/src/pages/WorkoutPage.css
@@ -1,4 +1,8 @@
-.mainCardWorkouts{
+body {
+    overflow-x: hidden;
+}
+
+.mainCardWorkouts {
     text-align: "center";
     background-color: "#347aeb";
     font-size: "200%";
@@ -23,40 +27,52 @@
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
+    color: #FFFFFF;
     line-height: 150%;
     /* or 60px */
-
     letter-spacing: -0.01em;
-
-    color: #FFFFFF;
 }
 
 .titleLine {
     border-width: 3px;
     width: 28%;
 }
+
 .categoryTitleLine {
     border-width: 3px;
     width: 60%;
 }
-@media screen and (max-width: 767px) {
-    .exploreWorkoutsContainer{
-        height: 60vh;
-        width: 100%
-    }
 
-}
-.exploreWorkoutsContainer{
+.exploreWorkoutsContainer {
     overflow-y: scroll;
     overflow-x:hidden;
     width: 100%;
     height: 80vh;
     background-color: #141414;
 }
-
-body{
-    overflow-x: hidden;
+.calendarStyle {
+    align-items: center; 
+    justify-content: center; 
+    display: flex;
 }
+.currentRoutine {
+    height: 100%; 
+    width: 100%;
+}
+.currentRoutineHead {
+    text-align: center;
+    background-color: #347aeb !important;
+    font-size: 31px;
+}
+.myRoutines {
+    text-align: center; 
+    background-color: #181c24 !important; 
+    font-size: 31px;
 
-
-
+}
+@media screen and (max-width: 767px) {
+    .exploreWorkoutsContainer {
+        height: 60vh;
+        width: 100%
+    }
+}
