--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,29 @@ code {
 .googleBtn > div {
   background-color: transparent !important;
 }
+
+
+/* custom scrollbar */
+*{
+  scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #212529;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 10px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  transition: 0.3s;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #919191;
+}
