fix more styling

--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  background-color: #12130f;
 }
-
 
 .formCenter {
   margin-bottom: 100px;
