--- a/src/pages/WorkoutPage.css
+++ b/src/pages/WorkoutPage.css
@@ -1,11 +1,76 @@
+body {
+    overflow-x: hidden;
+}
+
+.mainCardWorkouts {
+    text-align: "center";
+    background-color: "#347aeb";
+    font-size: "200%";
+}
+
+
+.newRoutine {
+    transition: 0.3s;
+}
+
+.newRoutine:hover {
+    background-color: #363d47 !important;
+}
+
 .mainPage {
     min-height: 100vh;
     color: white;
     background: #12130f;
-    max-width: inherit;
+    max-width: 1700px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .noMargin {
     margin-left: 0 !important;
     margin-right: 0 !important;
+}
+
+.calendarStyle {
+    align-items: center; 
+    justify-content: center; 
+    display: flex;
+}
+.currentRoutine {
+    height: 100%; 
+    width: 100%;
+}
+.currentRoutineHead {
+    text-align: center;
+    background-color: #347aeb !important;
+    font-size: 31px;
+}
+.myRoutines {
+    text-align: center; 
+    background-color: #181c24 !important; 
+    font-size: 31px;
+
+}
+
+/* Styling for calendar */
+.rdp {
+    --rdp-background-color: #535d6d !important;
+    --rdp-accent-color: #347aeb !important;
+    --rdp-outline-selected: 2px solid rgba(0, 0, 0, 0.75);
+}
+.rdp-head_cell { 
+    color: var(--rdp-accent-color) !important 
+}
+.rdp-day_outside {
+    color: #828282 !important;
+}
+.rdp-day_today{ 
+    font-weight: bold;
+    font-style: 120% !important;
+}
+@media screen and (max-width: 767px) {
+    .exploreWorkoutsContainer {
+        height: 60vh;
+        width: 100%
+    }
 }
