--- a/src/components/Modals/CreateRoutine.css
+++ b/src/components/Modals/CreateRoutine.css
@@ -18,24 +18,15 @@
     background-color: blue;
 }
 
-.align-right{
+.align-right {
     display: flex;
     justify-content: right;
 }
 
-.exercise-row{
-    padding: 11px 15px;
-    margin: 7px;
-    border-radius: 15px;
-    background-color: rgb(54, 58, 69);
-    display: flex;
-    align-items: center;
-}
-
-.add-exercise{
-    background-color: rgb(114, 113, 113);
-    border-image: url("http://i.stack.imgur.com/wLdVc.png") 4 round;
-
+.exercise-row {
+    margin: 15px 0 !important;
+    background-color: #363d47 !important;
+    transition: 0.3s;
 }
 
 .routine-modalContainer, .workouts-selection-container{
@@ -43,7 +34,6 @@
     height: 50vh;
     overflow: auto;
 }
-
 
 .routine-title{
     position: relative;
@@ -55,10 +45,6 @@
     width: 100%;
     /* margin-bottom: 20px; */
     font-size: 1.2em;
-}
-
-h4{
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .up-button, .down-button{
