--- a/src/components/RoutineWorkoutItem.css
+++ b/src/components/RoutineWorkoutItem.css
@@ -9,6 +9,12 @@
 }
 
 .workoutItemImg {
-    width: 10%;
     margin-right: 15px;
+    padding: 0.25rem;
+    background-color: #fff;
+    border: 1px solid var(--bs-border-color);
+    border-radius: 0.375rem;
+    max-width: 100px;
+    max-height: 100px;
+    height: auto;
 }
