--- a/src/components/Modals/ExerciseInfoModal.css
+++ b/src/components/Modals/ExerciseInfoModal.css
@@ -1,10 +1,4 @@
-.exerciseInfoModal .modal-content {
+.exerciseInfo_modal .modal-content {
     background-color: #363D47;
     color: #ffffff
-}
-
-.workoutExerciseInfoImg {
-    max-height: 30%; 
-    width: 100%; 
-    object-fit: Cover;
 }
