--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   background-color: #12130f;
 }
 
+.w-30 {
+  width: 30%;
+}
+
 .formCenter {
   margin-bottom: 100px;
 }
@@ -120,6 +124,11 @@ body {
   margin-left: 5px;
 }
 
+.checkbox {
+  width: 1.5em !important;
+  height: 1.5em !important;
+}
+
 .formAuthText {
   display: block;
   font-weight: 500;
@@ -136,7 +145,6 @@ body {
 .googleBtn > div {
   background-color: transparent !important;
 }
-
 
 /* custom scrollbar */
 *{
