--- a/src/components/Modals/ExerciseInfoModal.css
+++ b/src/components/Modals/ExerciseInfoModal.css
@@ -1,4 +1,4 @@
 .exerciseInfo_modal .modal-content {
-    background-color: #363D47;
-    color: #ffffff
+    background-color: rgb(34, 37, 45) ;
+    color: white;
 }
