--- a/src/components/FriendsList.css
+++ b/src/components/FriendsList.css
@@ -1,26 +1,15 @@
-.friends-list-wrap{
-    width: 100%;
-    height: 88vh;
-    padding: 0;
-    margin: 0;
-}
+
 
 .friends-list-header{
-    background-color: rgb(28, 31, 37);
-    color: white;
-    padding: 2px;
-    
-    
-}
+    background-color: rgb(34, 37, 45);
+    color: white;}
 
 .friends-list-body{
     background-color: rgb(34, 37, 45);
     position: inherit;
-    height: 90%;
+    max-height: calc(100vh - 140px);
     overflow: auto;
-    
 }
-
 
 .friend-name{
     color: white;
