--- a/src/components/FriendsList.css
+++ b/src/components/FriendsList.css
@@ -1,11 +1,13 @@
-
-
-.friends-list-header{
+.friends-list-wrap {
+    left: 0;
+    width: 350px !important;
     background-color: rgb(34, 37, 45);
-    color: white;}
+    color: white;
+}
 
 .friends-list-body{
     background-color: rgb(34, 37, 45);
+    
     position: inherit;
     max-height: calc(100vh - 140px);
     overflow: auto;
@@ -15,4 +17,10 @@
     color: white;
     font-size: 1.3em;
     line-height: 3em;
+}
+
+@media screen and (max-width: 767px) {
+    .friends-list-wrap {
+        display: none;
+    }
 }
