--- a/src/components/FriendsList.css
+++ b/src/components/FriendsList.css
@@ -1,29 +1,26 @@
-.friends-list-wrap{
-    width: 100%;
-    height: 88vh;
-    padding: 0;
-    margin: 0;
-}
-
-.friends-list-header{
-    background-color: rgb(28, 31, 37);
+.friends-list-wrap {
+    left: 0;
+    width: 350px !important;
+    background-color: rgb(34, 37, 45);
     color: white;
-    padding: 2px;
-    
-    
 }
 
 .friends-list-body{
     background-color: rgb(34, 37, 45);
+    width: 350px !important;
     position: inherit;
-    height: 90%;
+    max-height: calc(100vh - 140px);
     overflow: auto;
-    
 }
-
 
 .friend-name{
     color: white;
     font-size: 1.3em;
     line-height: 3em;
+}
+
+@media screen and (max-width: 767px) {
+    .friends-list-wrap {
+        display: none;
+    }
 }
