add new post to database

--- a/src/components/CreatePost.css
+++ b/src/components/CreatePost.css
@@ -8,6 +8,7 @@
 .inputArea{
     margin-right: 20px;
 }
+
 .labelStyle{
     font-size: 24px;
     font-weight: 600;
@@ -25,40 +26,21 @@
     border: none !important;
     border-radius: 12px !important;
     color: white !important;
+    
 }
 
 .uploadBar{
     background-color:  #22252D;
     border-radius: 12px;
     border-width: 1px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
 
 
 }
 .postButtonStyle{
-    border-radius: 12px;
-    border-width: 1px;
-    border-color: white;
     width: 100px;
-    font-weight: 600;
-    font-size: 24px;
-    margin-right: 20px;
-    background:none; 
-    border:none;
-    color: white;   
-}
-
-.photosButtonStyle{
-    background:none; 
-    border:none;    
-}
-
-.postButtonStyle {
-    transition: 0.3s;
-}
-
-.postButtonStyle:hover{
-    background: #0088FF;
+    font-weight: 600 !important;
+    font-size: 22px !important;
 }
 
 .rti--container {
@@ -69,10 +51,12 @@
     --rti-s: 6px !important; 
     --rti-tag: #2C3039 !important;
     --rti-tag-remove: #0088FF !important;
+    
   }
 .rti--input{
     background-color: #141414 !important;
     color: white !important;
+    width: min-content !important;
 }
 
   .iconFormat{
