--- a/src/components/PostFeedItem.css
+++ b/src/components/PostFeedItem.css
@@ -1,15 +1,3 @@
-.postItemInline {
-    display: inline-flex;
-}
-
-.postItemMarginRightSmall {
-    margin-right: 1rem;
-}
-
-.postItemMarginTopSmall {
-    margin-top: 1rem;
-}
-
 .postFeedItem {
     width: 100%;
     height: 30vh;
@@ -24,10 +12,11 @@
 .postImage {
     min-width: 100%;
     max-width: 100%;
+    background-color: white;
+    height: fit-content;
 }
 
 .postTagLink{
-    margin-left: 3px;
     text-decoration: none !important;
     color: #347aeb;
 }
