SPM-89: Improve Navbar Aesthetic & Styling (#29)
Co-authored-by: Jacky Ly <lyjacky@live.com>
Co-authored-by: Seyon Rajagopal <r_seyon@live.ca>
Co-authored-by: Jawwad Khan <32138927+JawwadK@users.noreply.github.com>

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -12,7 +12,9 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem !important;
     color: #FFFFFF !important;
+    
 }
+
 .dropdownlinks{
     font-size: 1.1rem !important;
 }
@@ -28,3 +30,11 @@
     font-size: 1.5rem !important;
     color: #FFFFFF !important;
 }
+
+.FitInHeader{
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    margin-right: 10%;
+}
+
