add ability to post comments

--- a/src/components/CreatePost.css
+++ b/src/components/CreatePost.css
@@ -3,6 +3,10 @@
     border-radius: 12px;
     height: 100%;
     width: 100%;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
 }
 
 .inputArea{
@@ -24,9 +28,12 @@
 .form-control{
     background-color: #141414 !important;
     border: none !important;
-    border-radius: 12px !important;
+    border-radius: 12px ;
     color: white !important;
-    
+    -webkit-border-radius: 12px ;
+    -moz-border-radius: 12px ;
+    -ms-border-radius: 12px ;
+    -o-border-radius: 12px ;
 }
 
 .uploadBar{
