--- a/src/components/PostFeedItem.css
+++ b/src/components/PostFeedItem.css
@@ -26,6 +26,10 @@
     color: #8e8e8e;
 }
 
+.postComments {
+    background-color: #141414 !important;
+}
+
 
 @media screen and (max-width: 767px) {
     .postFeedItem {
