read posts from backend and SPM-119 bugs

--- a/src/components/SocialSearchBar.css
+++ b/src/components/SocialSearchBar.css
@@ -1,25 +1,38 @@
-.SearchBar{
-    display:flex;
-    justify-content:left;
-    flex-direction:column;
-    
-}
-
-.SearchBar input{
-    margin-top:20px;
-    width:100%;
-    height:40px;
-    
+.searchBar input{
     background-color: #22252D !important;
-}
-.SearchBar p{
-    margin-top:10px;
-    margin-left:5px;
+    height: 40px;
+    padding-right: 40px;
 }
 
-.ResultsItem{
-    background-color: #22252D;
-    color:white;
-    margin:0px;
-    
+.searchIcon{
+    color: #fff;
+    right: 0.75rem;
+    top: 0.5rem;
+    cursor: pointer;
+}
+
+.searchBar p{
+    padding: 10px;
+    margin: 0;
+}
+
+.resultsContainer{
+    background-color: #212529;
+    width: 100%;
+    position: absolute;
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+
+.resultItem:hover {
+    cursor: pointer;
+    background-color: #2C2F3A;
+}
+
+.resultImage {
+    object-fit: cover;
+    height: 40px;
+    width: 40px;
+
 }
