--- a/src/components/PostFeedItem.css
+++ b/src/components/PostFeedItem.css
@@ -14,6 +14,7 @@
     max-width: 100%;
     background-color: white;
     height: fit-content;
+    cursor: pointer;
 }
 
 .postTagLink{
@@ -28,6 +29,8 @@
 
 .postComments {
     background-color: #141414 !important;
+    max-height: 200px;
+    overflow-y: auto;
 }
 
 
