--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  background-color: #141414 !important;
 }
+
 #root {
   background-color: #12130f;
   min-height: 100vh;
