Added loading spinner component with min delay

--- a/src/pages/WorkoutPage.css
+++ b/src/pages/WorkoutPage.css
@@ -14,7 +14,7 @@ body {
     color: white;
     background: #12130f;
     max-width: 1700px;
-    margin-top: 73px;
+    padding-top: 74px;
     margin-left: 5px;
     margin-right: 5px;
 }
