SPM-117: Added content to Help/FAQ page (#41)

--- a/src/pages/HelpPage.css
+++ b/src/pages/HelpPage.css
@@ -16,3 +16,9 @@
 .accordion-item{
     color:white !important;
 }
+.nav-tabs .nav-link.active,.nav-tabs .nav-item.show .nav-link{
+    background-color: unset !important;
+}
+.helpPageFooter div{
+    padding-top:30px;
+}
