Added consistent css colorings

--- a/src/components/CreatePost.css
+++ b/src/components/CreatePost.css
@@ -1,5 +1,5 @@
 .postBackground{
-    background-color: #22252D;
+    background-color: #22252f;
     border-radius: 12px;
     height: 100%;
     width: 100%;
