--- a/src/components/SocialSearchBar.css
+++ b/src/components/SocialSearchBar.css
@@ -1,5 +1,5 @@
 .searchBar input{
-    background-color: #22252D !important;
+    background-color: #22252f !important;
     height: 40px;
     padding-right: 40px;
 }
