SPM-25: Mobile Responsive Components and Images (#49)
Co-authored-by: Jawwad Khan <32138927+JawwadK@users.noreply.github.com>

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -18,6 +18,9 @@
 .dropdownlinks{
     font-size: 1.1rem !important;
 }
+.dropdown-menu{
+    background-color: #22252f !important;
+}
 .link-col{
     padding-left: 0;
 }
@@ -38,3 +41,11 @@
     margin-right: 10%;
 }
 
+@media screen and (max-width: 767px) {
+    #logoText{
+        display: none;
+    }
+    .nav-link{
+        font-size: 1.2rem !important;
+    }
+}
